lang/examples/good/03-01-variable-initialization.wdr
fun main(): Void {
  var a: Int = 42;
  var b: Bool = True;
  var c: Bool = False;
  var d: String = "Hi";

  printInt(a);
  printBool(b);
  printBool(c);
  printString(d);

  return;
}