lang/examples/bad/00-02-no-main.wdr
fun main1(): Void {
  printString("test");
  return;
}
